fix spacing on mobile home header

--- a/corpsey/static/css/small.less
+++ b/corpsey/static/css/small.less
@@ -20,6 +20,9 @@ Corpsey smaller
     	    .rounded-corners(20px);
     	}
         &.main {
+            .wrap {
+                padding: 20px 10px 10px;
+            }
             .intro {
                 width: 300px;
                 font: 14px/1.3em 'Arbutus Slab', helvetica, sans-serif;
